--- a/project-6.html
+++ b/project-6.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/YouTubePopUp.css" />
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -442,6 +443,7 @@
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/autotype.js"></script>
     <script src="assets/js/bootstrap.menu.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="assets/js/scripts.js"></script>
 
 </body>
