更新聯絡我們

--- a/index.html
+++ b/index.html
@@ -338,8 +338,11 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-12 pb-5">
+                        <img src="./assets/img/Award/002.jpg" alt="" class="img-fluid">
+                    </div>
                     <div class="col-md-4">
-                        <div class="item bg-4">
+                        <div class="item">
                             <div class="con">
                                 <h5>台中市</h5>
                                 <p><i class="ti-home" style="font-size: 15px; color: #c5a47e;"></i> 南區仁義街71巷2號</p>
