--- a/index.html
+++ b/index.html
@@ -134,22 +134,57 @@
         <section id="about" class="about mt-100 pb-100" data-scroll-index="1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 mb-20">
+                    <div class="col-md-12 mb-20">
                         <h6 class="small-title">公司簡介</h6>
                         <h4 class="title">About Us</h4>
+                        <p class="pb-5">
+                                光線 尺度 感知 空間 虛空間<br>
+                                所有的空間元素都存在造型 意含 感知 的整體關聯<br>
+                                以感知的經驗出發<br>
+                                重新定義空間尺度與感知空間能力
+                        </p>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h3 class="small-title">現象Phenomenon  與  內容Content 探討</h3>
+                            <ul>
+                                <li>基地分析 . 使用者分析</li>
+                                <li>案例分析 . 空間再定義</li>
+                                <li>議題探討 . 使用行為</li>
+                            </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <h3 class="small-title">內容Content  與  表現技術Technics 探討</h3>
+                            <ul>
+                                <li>設計概念發展</li>
+                                <li>平面配置設計 . 動線安排 . 空間序列</li>
+                                <li>空間定性定量 . 空間架構與組成</li>
+                                <li>手繪 . 拼貼 . 模型 閱讀與檢討空間</li>
+                            </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <h3 class="small-title">空間感知Sense of space  與  構成性Techtonics 探討</h3>
+                            <ul>
+                                <li>空間尺度與比例關係</li>
+                                <li>空間介面處理 . 材質與材料檢討</li>
+                                <li>3D空間感知</li>
+                                <li>細部設計 . 構件設計 . 家俱配置與設計</li>
+                            </ul>
+                            </div>
+                        </div>
+
+                        <!-- <p>室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。</p>
                         <p>室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。</p>
-                        <p>室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。</p>
-                        <p>室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。</p>
+                        <p>室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。室內設計，像是置身可以掌握卻無法設限的美學宇宙裡，隨著一步步探索與推展，總能發掘到多樣且無窮的可能性。</p> -->
                     </div>
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <div class="yearimg">
                             <div class="numb">10</div>
                         </div>
                         <div class="year">
-                        <h6 class="small-title">在室內設計中</h6>
+                        <h6 class="small-title">年在室內設計中</h6>
                         <h4 class="title">好的設計，自己會說話</h4>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -162,7 +197,7 @@
                     </div>
                     <div class="col-md-7 pt-3">
                         <h6 class="small-title">設計總監</h6>
-                        <h4 class="title">Hsu Flora</h4>
+                        <h4 class="title">羅凱欣 Lucas Lo</h4>
                         <p>空間與人的關係非常緊密，空間應該以人為本，從人的需求為空間的精神出發。尚藝設計的精神是-不做繁複的設計手法，也不刻意營造材料的表現，運用人與空間的關係做重新的定位，讓空間與使用者達到最深刻的共鳴。</p>
                         <p>空間與人的關係非常緊密，空間應該以人為本，從人的需求為空間的精神出發。尚藝設計的精神是-不做繁複的設計手法，也不刻意營造材料的表現，運用人與空間的關係做重新的定位，讓空間與使用者達到最深刻的共鳴。</p>
                         <p>空間與人的關係非常緊密，空間應該以人為本，從人的需求為空間的精神出發。尚藝設計的精神是-不做繁複的設計手法，也不刻意營造材料的表現，運用人與空間的關係做重新的定位，讓空間與使用者達到最深刻的共鳴。</p>
