更新關於我們，修改照片尺寸

--- a/index.html
+++ b/index.html
@@ -135,24 +135,26 @@
             <div class="container">
                 <h6 class="small-title">公司簡介</h6>
                 <h4 class="title">About Us</h4>
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="assets/img/about/LYC_7132-2.jpg" alt="" class="w-100">
+                <div class="row pt-3">
+
+                    <div class="col-md-6">
+                        <p>
+                            ｢房角｣，源於聖經 以賽亞書 28：16，所以主耶和華如此說：看哪，我在錫安放一塊石頭作為根基，是試驗過的石頭，是穩固根基，寶貴的房角石，信靠的人必不著急。
+                        </p>
+                        <p>
+                            ｢制作｣，其意思為製造無形之產物。建築、結構、空間為有形；生活的方式、態度、關係則為無形。
+                        </p>
+                        <p>
+                            ｢房角制作｣，為主人設計一個穩固的空間，也為他設計一種生活態度。
+                        </p>
+                        <p>
+                            空間，是生活的容器，承載居住者的生活經驗與累積。室內設計，是將此容器捏塑的大小適中，讓居住者在其中能安然自在。
+                        </p>
+                        <h6 class="small-title">房角制作 Since 2014</h6>
                     </div>
-                    <div class="col-md-7 pt-3">
-                        <h6 class="small-title">設計總監</h6>
-                        <h4 class="title">羅凱欣 Lucas Lo</h4>
-                        <p class="pb-5 border-bottom" style="border-color: #17367d !important;">
-                            光線 尺度 感知 空間 虛空間<br>
-                            所有的空間元素都存在造型 意含 感知 的整體關聯<br>
-                            以感知的經驗出發<br>
-                            重新定義空間尺度與感知空間能力
-                        </p>
-                        <h4 class="small-title">資歷</h4>
-                        <p class="pb-5">
-                            房角制作x室內設計 主持人<br>
-                            大葉大學空間設計系講
-                        </p>
+                    <div class="col-md-6">
+                        <img src="./assets/img/Award/001.jpg" alt="房角" class="img-fluid">
+                        <!-- <img src="assets/img/about/LYC_7132-2.jpg" alt="" class="w-100"> -->
                     </div>
                 </div>
             </div>
