更新輪播，刪除沒必要頁面

--- a/index.html
+++ b/index.html
@@ -79,48 +79,58 @@
         <header class="header pos-re slider-fade" data-scroll-index="0">
             <div class="owl-carousel owl-theme">
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/01.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse">
+                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
                         <div class="text">
                             <img src="./assets/img/logo/1.png" alt="" style="width: 150px;">
-                            義大利 A-design Award 銅獎<br>
-                            英國 Licc Honorable Mention <br>
-                            法國 Paris Design Award Honorable Mention<br>
-                            韓國 K-Design Award 金獎 <br>
-                            美國 Muse Design Awards 金獎
+                            <span class="d-none d-md-inline-block">
+                                義大利 A-design Award 銅獎<br>
+                                英國 Licc Honorable Mention <br>
+                                法國 Paris Design Award Honorable Mention<br>
+                                韓國 K-Design Award 金獎 <br>
+                                美國 Muse Design Awards 金獎
+                            </span>
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/02.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse">
+                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start ">
                         <div class="text">
                             <img src="./assets/img/logo/1.png" alt="" style="width: 150px;">
-                            義大利 A-design Award 銅獎<br>
-                            英國 Licc Honorable Mention <br>
-                            法國 Paris Design Award Honorable Mention<br>
-                            韓國 K-Design Award 金獎 <br>
-                            美國 Muse Design Awards 金獎
+                            <span class="d-none d-md-inline-block">
+                                義大利 A-design Award 銅獎<br>
+                                英國 Licc Honorable Mention <br>
+                                法國 Paris Design Award Honorable Mention<br>
+                                韓國 K-Design Award 金獎 <br>
+                                美國 Muse Design Awards 金獎
+                            </span>
+
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/03.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse">
+                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
                         <div class="text">
                             <img src="./assets/img/logo/2.png" alt="" style="width: 150px;">
-                            義大利 A-design Award 銅獎 <br>
-                            日本 Good Design Award <br>
-                            台灣 TID Award 入圍<br>
-                            美國 Muse Design Awards 金獎
+                            <span class="d-none d-md-inline-block">
+                                義大利 A-design Award 銅獎 <br>
+                                日本 Good Design Award <br>
+                                台灣 TID Award 入圍<br>
+                                美國 Muse Design Awards 金獎
+                            </span>
+
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/04.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse">
+                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
                         <div class="text">
                             <img src="./assets/img/logo/2.png" alt="" style="width: 150px;">
+                            <span class="d-none d-md-inline-block">
                             義大利 A-design Award 銅獎 <br>
                             日本 Good Design Award <br>
                             台灣 TID Award 入圍<br>
                             美國 Muse Design Awards 金獎
+                            </span>
                         </div>
                     </div>
                 </div>
