更改輪播縮小的時候變成一半的圖，順便把沒必要的外掛刪除，客戶真機車

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="assets/css/bootstrap.menu.css" />
     <link rel="stylesheet" href="assets/css/animate.min.css" />
     <link rel="stylesheet" href="assets/css/themify-icons.css">
-    <link rel="stylesheet" href="assets/css/YouTubePopUp.css" />
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -79,63 +78,52 @@
         <header class="header pos-re slider-fade" data-scroll-index="0">
             <div class="owl-carousel owl-theme">
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/01.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
+                    <div class="container v-middle caption d-flex flex-md-row-reverse">
                         <div class="text">
                             <img src="./assets/img/logo/1.png" alt="" style="width: 150px;">
-                            <span class="d-none d-md-inline-block">
                                 義大利 A-design Award 銅獎<br>
                                 英國 Licc Honorable Mention <br>
                                 法國 Paris Design Award Honorable Mention<br>
                                 韓國 K-Design Award 金獎 <br>
                                 美國 Muse Design Awards 金獎
-                            </span>
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/02.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start ">
+                    <div class="container v-middle caption d-flex flex-md-row-reverse">
                         <div class="text">
                             <img src="./assets/img/logo/1.png" alt="" style="width: 150px;">
-                            <span class="d-none d-md-inline-block">
                                 義大利 A-design Award 銅獎<br>
                                 英國 Licc Honorable Mention <br>
                                 法國 Paris Design Award Honorable Mention<br>
                                 韓國 K-Design Award 金獎 <br>
                                 美國 Muse Design Awards 金獎
-                            </span>
-
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/03.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
+                    <div class="container v-middle caption d-flex flex-md-row-reverse">
                         <div class="text">
                             <img src="./assets/img/logo/2.png" alt="" style="width: 150px;">
-                            <span class="d-none d-md-inline-block">
                                 義大利 A-design Award 銅獎 <br>
                                 日本 Good Design Award <br>
                                 台灣 TID Award 入圍<br>
                                 美國 Muse Design Awards 金獎
-                            </span>
-
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/04.jpg">
-                    <div class="container v-middle caption d-flex flex-row-reverse align-items-end align-items-md-start">
+                    <div class="container v-middle caption d-flex flex-md-row-reverse">
                         <div class="text">
                             <img src="./assets/img/logo/2.png" alt="" style="width: 150px;">
-                            <span class="d-none d-md-inline-block">
                             義大利 A-design Award 銅獎 <br>
                             日本 Good Design Award <br>
                             台灣 TID Award 入圍<br>
                             美國 Muse Design Awards 金獎
-                            </span>
                         </div>
                     </div>
                 </div>
                 <div class="item bg-img" data-overlay-dark="3" data-background="assets/img/index/05.jpg">
-
                 </div>
             </div>
         </header>
@@ -164,12 +152,12 @@
                     </div>
                     <div class="col-md-6">
                         <img src="./assets/img/Award/001.jpg" alt="房角" class="img-fluid">
-                        <!-- <img src="assets/img/about/LYC_7132-2.jpg" alt="" class="w-100"> -->
                     </div>
                 </div>
             </div>
 
         </section>
+
         <!-- 得獎紀錄 -->
         <section id="blog" class="blog mt-100 pb-100" data-scroll-index="2">
             <div class="container">
@@ -211,7 +199,6 @@
                                     日本 <b>Good Design Award</b><br>
                                     台灣 <b>TID Award</b> 入圍<br>
                                     美國 <b>Muse Design Awards</b> 金獎
-                                    <!-- <a href="award.html"><b>美國</b> Dec 26, 2020 </a> -->
                                 </div>
                             </div>
                         </div>
@@ -298,17 +285,6 @@
                                     <a href="project-5.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
-                            <!-- <div class="item mb-50">
-                                <div class="position-re o-hidden">
-                                    <a href="project-4.html">
-                                    <img src="assets/img/Projects/04/index.jpg" alt="台中登陽羅">
-                                </a>
-                                </div>
-                                <div class="con">
-                                    <h5><a href="project-4.html">台中登陽羅宅</a></h5>
-                                    <a href="project-4.html"><i class="ti-arrow-right"></i></a>
-                                </div>
-                            </div> -->
                             <div class="item mb-50">
                                 <div class="position-re o-hidden">
                                     <a href="project-8.html">
@@ -369,7 +345,6 @@
     <script src="assets/js/jquery.waypoints.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.stellar.min.js"></script>
-    <script src="assets/js/YouTubePopUp.jquery.js"></script>
     <script src="assets/js/validator.js"></script>
     <script src="assets/js/autotype.js"></script>
     <script src="assets/js/bootstrap.menu.js"></script>
